crates/math-core/tests/snapshots/wiki_test__wiki013.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\sinh k, \\cosh l, \\tanh m, \\coth n"
---
<math>
    <mo lspace="0" rspace="0.1667em">sinh</mo>
    <mi>k</mi>
    <mo>,</mo>
    <mo lspace="0" rspace="0.1667em">cosh</mo>
    <mi>l</mi>
    <mo>,</mo>
    <mo lspace="0" rspace="0.1667em">tanh</mo>
    <mi>m</mi>
    <mo>,</mo>
    <mo lspace="0" rspace="0.1667em">coth</mo>
    <mi>n</mi>
</math>
