crates/math-core/tests/snapshots/wiki_test__wiki017.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\min(x,y), \\max(x,y)"
---
<math>
    <mo lspace="0" rspace="0">min</mo>
    <mo stretchy="false">(</mo>
    <mi>x</mi>
    <mo>,</mo>
    <mi>y</mi>
    <mo stretchy="false">)</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">max</mo>
    <mo stretchy="false">(</mo>
    <mi>x</mi>
    <mo>,</mo>
    <mi>y</mi>
    <mo stretchy="false">)</mo>
</math>
