crates/math-core/tests/snapshots/wiki_test__wiki020.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\dim p, \\deg q, \\det m, \\ker\\phi"
---
<math>
    <mo lspace="0" rspace="0.1667em">dim</mo>
    <mi>p</mi>
    <mo>,</mo>
    <mo lspace="0" rspace="0.1667em">deg</mo>
    <mi>q</mi>
    <mo>,</mo>
    <mo lspace="0" rspace="0.1667em">det</mo>
    <mi>m</mi>
    <mo>,</mo>
    <mo lspace="0" rspace="0.1667em">ker</mo>
    <mi>ϕ</mi>
</math>
