crates/math-core/tests/snapshots/wiki_test__wiki021.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\Pr j, \\hom l, \\lVert z \\rVert, \\arg z"
---
<math>
    <mo lspace="0" rspace="0.1667em">Pr</mo>
    <mi>j</mi>
    <mo>,</mo>
    <mo lspace="0" rspace="0.1667em">hom</mo>
    <mi>l</mi>
    <mo>,</mo>
    <mo stretchy="false" form="prefix">‖</mo>
    <mi>z</mi>
    <mo stretchy="false" form="postfix">‖</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0.1667em">arg</mo>
    <mi>z</mi>
</math>
