crates/math-core/tests/snapshots/wiki_test__wiki025.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\infty, \\aleph, \\complement,\\backepsilon, \\eth, \\Finv, \\hbar"
---
<math>
    <mi>∞</mi>
    <mo>,</mo>
    <mi>ℵ</mi>
    <mo>,</mo>
    <mi>∁</mi>
    <mo>,</mo>
    <mi>϶</mi>
    <mo>,</mo>
    <mi>ð</mi>
    <mo>,</mo>
    <mi>Ⅎ</mi>
    <mo>,</mo>
    <mi>ℏ</mi>
</math>
