crates/math-core/tests/snapshots/wiki_test__wiki026.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "s_k \\equiv 0 \\pmod{m}"
---
<math>
    <msub>
        <mi>s</mi>
        <mi>k</mi>
    </msub>
    <mo>≡</mo>
    <mn>0</mn>
    <mspace width="1em"/>
    <mo stretchy="false">(</mo>
    <mpadded><mi>mod</mi></mpadded>
    <mspace width="0.33333334em"/>
    <mi>m</mi>
    <mo stretchy="false">)</mo>
</math>
